--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <link
-      href="https://api.fontshare.com/v2/css?f[]=supreme@100,101,200,201,300,301,400,401,500,501,700,701,800,801&display=swap"
-      rel="stylesheet">
-    <link href="https://api.fontshare.com/v2/css?f[]=tanker@400&display=swap" rel="stylesheet">
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+<link href="https://api.fontshare.com/v2/css?f[]=chillax@200,300,400,500,600,700&display=swap" rel="stylesheet">
+<link href="https://api.fontshare.com/v2/css?f[]=chubbo@200,201,300,301,400,401,500,501,700,701,1,2&display=swap"
+  rel="stylesheet">
+<link
+  href="https://api.fontshare.com/v2/css?f[]=general-sans@200,201,300,301,400,401,500,501,600,601,700,701&display=swap"
+  rel="stylesheet">
 
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAZEL</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HAZEL</title>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
